[package]
name = "time"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "*"
crossterm = "*"
ctrlc = "*"
quanta = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "*" }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
